Bug 1260335 - Add a comment that explains why the perspective child can't have more than one frame metrics. r=mattwoodrow

MozReview-Commit-ID: BsB8XRtUd4b

--HG--
extra : rebase_source : 6588e687da119db175d5cc2bdf8572f7725b5474
extra : histedit_source : 09c4b9506b86a1986902d62e3cd0079f098f68df